# ortools_boilerplate

./: .gitignore  CMakeLists.txt  readme.md
scripts/: capacity.py
src/: ortools.cpp
